# ntgram

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: help_get_config.json
migrations/: 0001_initial.sql
migrations/account/: 0001_initial.sql
migrations/chat/: 0001_initial.sql
migrations/updates/: 0001_initial.sql
proto/: account.proto  chat.proto  common.proto  message.proto  profile.proto  status.proto  updates.proto
scripts/: generate_protos.py  generate_rsa_keys.py
tests/: _chat_service_factory.py  _fake_chat_pool.py  _fake_updates_stub.py  test_abridged_transport.py  test_account_client.py  test_account_service.py  test_chat_dao_batched.py  test_chat_dao_messages.py  test_chat_service_add_title.py  test_chat_service_create.py  test_chat_service_get_chats.py  test_encrypted_envelope.py  test_frame_decoder_persist.py  test_gateway_router_flow.py  test_input_user.py  test_message_client.py  test_message_service_delete.py  test_message_service_edit.py  test_message_service_read.py  test_message_service_send.py  test_messaging_alignment.py  test_mtproto_auth_handshake.py  test_mtproto_encrypted_layer.py  test_mtproto_service_semantics.py  test_mtproto_updates_state.py  test_obfuscation_transport.py  test_outbox_service.py  test_pipeline_pts_cursor.py  test_pts_cursor.py  test_push_subscriber_wiring.py  test_redis_session_repository.py  test_rsa_keys.py  test_salt_schedule.py  test_session_store.py  test_tl_codec.py  test_tl_self_user.py  test_updates_handlers.py  test_users_get_full_user.py
tl/: api.json
(+112 files in other folders)
